feat(gateway): 补齐 AI Gateway Core 容错与 Provider 转换器 (plan-298)
- InvokeProcessor.parseRetryAfter 增加 RFC 1123 HTTP-date 解析，429/5xx 异常补 responseBody
- 新增 DeepSeekMessageConverter（OpenAI 兼容透传）与 GeminiMessageConverter（messages/contents 双向映射）
- 修复 AiBackendMessageConverter.FALLBACK_CONVERTERS 空表并填充 DEEPSEEK/GEMINI
- gateway-defaults.beans.xml 注册 nopBackendMessageConverter_DEEPSEEK/_GEMINI
- 重写 InvokeProcessorRetryTest 空壳用例为真实断言，新增 DeepSeek/Gemini 转换器测试

Plan: ai-dev/plans/298-nop-gateway-ai-core.md